@@ -42,6 +42,7 @@ be_visitor_component_exh::visit_component (be_component *node)
   /// CIDL-generated namespace used 'CIDL_' + composition name.
   /// Now we use 'CIAO_' + component's flat name.
   os_ << be_nl_2
+      << "/// Component implementation namespace" << be_nl
       << "namespace CIAO_" << node->flat_name ()
       << "_Impl" << be_nl
       << "{" << be_idt;
