@@ -1,3 +1,10 @@
+Fri Mar 30 13:04:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_component/component_exh.cpp:
+        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
+        * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
+          Extended documentation for the CIAO executors
+
 Fri Mar 30 13:55:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>
 
         * tao/Compression/Compression_Manager.h:
@@ -50,7 +57,7 @@ Tue Mar 27 13:17:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot c
 
         * tao/ORB_Core.cpp:
           Release the compression_manager_ in TAO_ORB_Core::fini().
-          
+
         * tao/Compression/Compression_Manager.cpp:
         * tao/Compression/Compression_Manager.h:
           Deletion bug-fixes.
